--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Valinor Library | Painel do Guardião</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 
+    font-size=%2290%22 fill=%22%23F5C469%22>✦</text></svg>">
   <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,6 +77,7 @@
 
         <div class="btn-container-form">
           <button type="submit" class="btn-primary">Salvar no Acervo</button>
+          <button type="button" class="btn-primary" data-target="tela-livros">Voltar</button>
         </div>
 
       </form>
@@ -176,6 +179,7 @@
 
           <div class="btn-container-form">
             <button type="submit" class="btn-primary">Registrar na Guilda</button>
+            <button type="button" class="btn-primary" data-target="tela-livros">Voltar</button>
           </div>
       </form>
     </section>
@@ -231,10 +235,12 @@
 
         <div class="btn-container">
           <button type="submit" class="btn-primary">Confirmar Empréstimo</button>
+          <button type="button" class="btn-primary" data-target="tela-emprestimos">Voltar</button>
         </div>
       </form>
     </section>
   </main>
+
   <footer class="rodape">
     <div class="container">
       <p>&copy; 2025 <strong>Valinor Library</strong></p>
